syntax = "proto2";

package serviceTest;

message HelloWorldRequest {
    optional string world = 1;
}

message HelloWorldResponse {
    optional string world = 1;
}

service HelloService {
    rpc World (HelloWorldRequest) returns (HelloWorldResponse);
}

message Alpha {
    optional Beta beta = 1;
    enum Beta {
       ZERO = 0;
       ONE = 1;
    }
}

service LookupTestService {
    rpc Alpha (Alpha) returns (HelloWorldResponse);
}
